get2gnow #0000F9aEC - trying to get2gnow more users.
I've improved several methods that get2gnow uses to determine notification and how it re-loads timelines.  Its was appending the latest Reply repeatarly but only with Twitter, I'm working on figuring out what's causing it.

I've also created an rpm spec file and an rpm build script.  My initial x86_64 rpms are available at my website: http://uberchicgeekchick.com/?projects=get2gnow .  I'm finally working on getting get2gnow distributed...btw I could really use some help with this.  Creating packages, testing builds, or whatever.

I've finally fixed the incorrect notification problem with duplicate reply notification & other problems with DM & Reply timelines where being refreshed.  Now they're working perfectly.  I've also fixed my rpm spec file so now to try running get2gnow through build service once again.

Committed on: 2009-06-22 @ 07:57:27 AM

--- a/Makefile.am
+++ b/Makefile.am
@@ -16,6 +16,7 @@ EXTRA_DIST = 			\
 	README                  \
 	AUTHORS			\
 	NEWS			\
+	get2gnow.spec		\
 	xmldocs.make		\
 	omf.make		\
 	gnome-doc-utils.make	\
@@ -25,6 +26,7 @@ DISTCLEANFILES = 		\
 	intltool-extract	\
 	intltool-merge		\
 	intltool-update		\
+	get2gnow.spec		\
 	gnome-doc-utils.make
 
 DISTCHECK_CONFIGURE_FLAGS =	\
