--- a/Makefile.in
+++ b/Makefile.in
@@ -35,9 +35,9 @@ host_triplet = @host@
 subdir = .
 DIST_COMMON = README $(am__configure_deps) $(srcdir)/Makefile.am \
 	$(srcdir)/Makefile.in $(srcdir)/config.h.in \
-	$(top_srcdir)/configure AUTHORS COPYING ChangeLog INSTALL NEWS \
-	TODO config.guess config.sub depcomp install-sh ltmain.sh \
-	missing mkinstalldirs
+	$(srcdir)/get2gnow.spec.in $(top_srcdir)/configure AUTHORS \
+	COPYING ChangeLog INSTALL NEWS TODO config.guess config.sub \
+	depcomp install-sh ltmain.sh missing mkinstalldirs
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 am__aclocal_m4_deps = $(top_srcdir)/m4/gnome-doc-utils.m4 \
 	$(top_srcdir)/m4/intltool.m4 $(top_srcdir)/configure.in
@@ -47,7 +47,7 @@ am__CONFIG_DISTCLEAN_FILES = config.status config.cache config.log \
  configure.lineno config.status.lineno
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
 CONFIG_HEADER = config.h
-CONFIG_CLEAN_FILES =
+CONFIG_CLEAN_FILES = get2gnow.spec
 SOURCES =
 DIST_SOURCES =
 RECURSIVE_TARGETS = all-recursive check-recursive dvi-recursive \
@@ -251,25 +251,27 @@ target_alias = @target_alias@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 SUBDIRS = data src po $(am__append_1)
-INTLTOOL = \
+INTLTOOL =			\
 	intltool-extract.in 	\
 	intltool-merge.in 	\
 	intltool-update.in
 
-EXTRA_DIST = \
+EXTRA_DIST =			\
 	ChangeLog               \
 	README                  \
 	AUTHORS			\
 	NEWS			\
+	get2gnow.spec		\
 	xmldocs.make		\
 	omf.make		\
 	gnome-doc-utils.make	\
 	$(INTLTOOL)
 
-DISTCLEANFILES = \
+DISTCLEANFILES =		\
 	intltool-extract	\
 	intltool-merge		\
 	intltool-update		\
+	get2gnow.spec		\
 	gnome-doc-utils.make
 
 
