--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -14,25 +14,33 @@ gtkbuilder_DATA = 				\
 	following-viewer.ui			\
 	friends-manager.ui			\
 	main-window.ui				\
-	tweet-list.ui				\
 	tweet-view.ui				\
 	online-services-request-popup.ui	\
 	preferences.ui				\
 	user-profile-viewer.ui
 
+tweet_list_DATA = tweet-list.ui
+tweet_list_in_DATA = tweet-list.in.ui
+
 svgicondir = $(datadir)/icons/hicolor/scalable/apps
 svgicon_DATA = get2gnow.svg
 	
 EXTRA_DIST =			\
+	$(tweet_list_DATA)	\
 	$(gtkbuilder_DATA)	\
 	$(svgicon_DATA)		\
 	$(desktop_in_files)	\
 	$(schemas_in_files)
 	
 DISTCLEANFILES =		\
+	$(tweet_list_DATA)	\
 	$(desktop_DATA)		\
 	$(schemas_DATA)
-	
+
+
+tweet-list.ui: $(tweet_list_in_DATA)
+	ex -n -s -E '+1,$$s/\(class="\)Gtk\(TreeView"\)/\1Sexy\2/g' '+wq! $(top_builddir)/data/$(tweet_list_DATA)' '$(top_builddir)/data/$(tweet_list_in_DATA)'
+
 gtk_update_icon_cache = gtk-update-icon-cache -f -t $(datadir)/icons/hicolor
 
 install-data-hook: update-icon-cache
