--- a/data/Makefile.in
+++ b/data/Makefile.in
@@ -55,11 +55,12 @@ am__installdirs = "$(DESTDIR)$(desktopdir)" "$(DESTDIR)$(gtkbuilderdir)" \
 	"$(DESTDIR)$(icondir)" "$(DESTDIR)$(schemasdir)" \
 	"$(DESTDIR)$(svgicondir)"
 desktopDATA_INSTALL = $(INSTALL_DATA)
+tweet_listDATA_INSTALL = $(INSTALL_DATA)
 gtkbuilderDATA_INSTALL = $(INSTALL_DATA)
 iconDATA_INSTALL = $(INSTALL_DATA)
 schemasDATA_INSTALL = $(INSTALL_DATA)
 svgiconDATA_INSTALL = $(INSTALL_DATA)
-DATA = $(desktop_DATA) $(gtkbuilder_DATA) $(schemas_DATA) $(svgicon_DATA)
+DATA = $(tweet_list_DATA) $(desktop_DATA) $(gtkbuilder_DATA) $(schemas_DATA) $(svgicon_DATA)
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
 ACLOCAL = @ACLOCAL@
 ALL_LINGUAS = @ALL_LINGUAS@
@@ -249,23 +250,31 @@ gtkbuilder_DATA = 				\
 	following-viewer.ui			\
 	friends-manager.ui			\
 	main-window.ui				\
-	tweet-list.ui				\
 	tweet-view.ui				\
 	online-services-request-popup.ui	\
 	preferences.ui				\
 	user-profile-viewer.ui
 
+tweet_list_DATA = tweet-list.ui
+tweet_list_in_DATA = tweet-list.in.ui
+
 svgicondir = $(datadir)/icons/hicolor/scalable/apps
 svgicon_DATA = get2gnow.svg
-EXTRA_DIST = \
+EXTRA_DIST =			\
+	$(tweet_list_DATA)	\
 	$(gtkbuilder_DATA)	\
 	$(svgicon_DATA)		\
 	$(desktop_in_files)	\
 	$(schemas_in_files)
 
-DISTCLEANFILES = \
+DISTCLEANFILES =		\
+	$(tweet_list_DATA)	\
 	$(desktop_DATA)		\
 	$(schemas_DATA)
+
+
+tweet-list.ui: $(tweet_list_in_DATA)
+	ex -n -s -E '+1,$$s/\(class="\)Gtk\(TreeView"\)/\1Sexy\2/g' '+wq! $(top_builddir)/data/$(tweet_list_DATA)' '$(top_builddir)/data/$(tweet_list_in_DATA)'
 
 gtk_update_icon_cache = gtk-update-icon-cache -f -t $(datadir)/icons/hicolor
 all: all-am
@@ -327,6 +336,24 @@ uninstall-desktopDATA:
 	  rm -f "$(DESTDIR)$(desktopdir)/$$f"; \
 	done
 
+install-tweet_listDATA: $(tweet_list_DATA)
+	@$(NORMAL_INSTALL)
+	test -z "$(gtkbuilderdir)" || $(MKDIR_P) "$(DESTDIR)$(gtkbuilderdir)"
+	@list='$(tweet_list_DATA)'; for p in $$list; do \
+		if test -f "$$p"; then d=; else d="$(srcdir)/"; fi; \
+		f=$(am__strip_dir) \
+		echo " $(tweet_listDATA_INSTALL) '$$d$$p' '$(DESTDIR)$(gtkbuilderdir)/$$f'"; \
+		$(tweet_listDATA_INSTALL) "$$d$$p" "$(DESTDIR)$(gtkbuilderdir)/$$f"; \
+	done
+
+uninstall-tweet_listDATA:
+	@$(NORMAL_UNINSTALL)
+	@list='$(tweet_list_DATA)'; for p in $$list; do \
+		f=$(am__strip_dir) \
+		echo " rm -f '$(DESTDIR)$(gtkbuilderdir)/$$f'"; \
+		rm -f "$(DESTDIR)$(gtkbuilderdir)/$$f"; \
+	done
+
 install-gtkbuilderDATA: $(gtkbuilder_DATA)
 	@$(NORMAL_INSTALL)
 	test -z "$(gtkbuilderdir)" || $(MKDIR_P) "$(DESTDIR)$(gtkbuilderdir)"
@@ -344,6 +371,7 @@ uninstall-gtkbuilderDATA:
 	  echo " rm -f '$(DESTDIR)$(gtkbuilderdir)/$$f'"; \
 	  rm -f "$(DESTDIR)$(gtkbuilderdir)/$$f"; \
 	done
+
 install-schemasDATA: $(schemas_DATA)
 	@$(NORMAL_INSTALL)
 	test -z "$(schemasdir)" || $(MKDIR_P) "$(DESTDIR)$(schemasdir)"
@@ -462,8 +490,8 @@ info: info-am
 info-am:
 
 install-data-am: install-data-local install-desktopDATA \
-	install-gtkbuilderDATA install-iconDATA install-schemasDATA \
-	install-svgiconDATA
+	install-tweet_listDATA install-gtkbuilderDATA install-schemasDATA \
+	install-iconDATA install-svgiconDATA
 	@$(NORMAL_INSTALL)
 	$(MAKE) $(AM_MAKEFLAGS) install-data-hook
 
@@ -499,7 +527,7 @@ ps: ps-am
 
 ps-am:
 
-uninstall-am: uninstall-desktopDATA uninstall-gtkbuilderDATA \
+uninstall-am: uninstall-desktopDATA uninstall-tweet_listDATA uninstall-gtkbuilderDATA \
 	uninstall-iconDATA uninstall-schemasDATA uninstall-svgiconDATA
 	@$(NORMAL_INSTALL)
 	$(MAKE) $(AM_MAKEFLAGS) uninstall-hook
@@ -511,14 +539,14 @@ uninstall-am: uninstall-desktopDATA uninstall-gtkbuilderDATA \
 	dvi-am html html-am info info-am install install-am \
 	install-data install-data-am install-data-hook \
 	install-data-local install-desktopDATA install-dvi \
-	install-dvi-am install-exec install-exec-am install-gtkbuilderDATA \
+	install-dvi-am install-exec install-exec-am install-tweet_listDATA install-gtkbuilderDATA \
 	install-html install-html-am install-iconDATA install-info \
 	install-info-am install-man install-pdf install-pdf-am \
 	install-ps install-ps-am install-schemasDATA install-strip \
 	install-svgiconDATA installcheck installcheck-am installdirs \
 	maintainer-clean maintainer-clean-generic mostlyclean \
 	mostlyclean-generic mostlyclean-libtool pdf pdf-am ps ps-am \
-	uninstall uninstall-am uninstall-desktopDATA \
+	uninstall uninstall-am uninstall-desktopDATA install-tweet_listDATA \
 	uninstall-gtkbuilderDATA uninstall-hook uninstall-iconDATA \
 	uninstall-schemasDATA uninstall-svgiconDATA
 
