get2gnow #00EEECa0C - how chill!  improved compatiblity...and getting sexier!
get2gnow is most def chill!  Any one who may have had issues with get2gnow segfault, espially with libsoup 2.4 - < 2.26, which I know you prolly don't know.  But any way's I've fixed a bunch of problems.  Mostly by requiring libsoup-2.4-2.26.1.  Bizarally libsoup-2.4-2.27 is currently totally busted.  I can't confirm if this is just given my current GNOME:Factory update status of my openSUSE install or if it would be the same across multiple distros.  But I don't care enough to setup multiple VMs all on my lil laptop just to confirm a devel version of GNOME library is busted.

Especially since I did find a work around.  LOL it just wasn't work able.

The only way I could get libsoup-2.24-2.27.1 to work was to literally create a new thread to process each request after a delay of at least 5 seconds.  For example one of the way I got get2gnow to work w/libsoup-2.24-2.27.1 was to create a timout thread, using g_timeout_add_seconds_full, and to have it 'resubmit' the request 5 seconds later.  Now by resubmit I mean send it back to get2gnow's very same method which created the request.  So obviously there's something whacked going on with libsoup.  There were other issue like random drops from Twitter, with http/ip error 7 (connection unexpectadly terminated).  So yeah something's whacked.

All of that said...I pretty much totally no longer care.  I'm prolly done doing any kinda of 'internet' programming.  My personal reason is that I'm an open source artist & I've been looking to find the motivation, inspiration, & especially validation to switch my focus to more graphical, multi-media applications.

Yeah, all or that was personal avoidance babble, yes my uber babbly way of saying this:

I want to, and now I'm going to, start creating *GAME *FOR WOMEN!*  I don't mean casual games, or games for targetted at existing female gamers.  I mean new genres, new gameplay, & a totally different perspect

--- a/configure.in
+++ b/configure.in
@@ -1,4 +1,4 @@
-AC_INIT([get2gnow], ["#000EEEa0C"], [http://uberChicGeekChick.Com/?projects=get2gnow], [get2gnow])
+AC_INIT([get2gnow], ["#00EEECaC0"], [http://uberChicGeekChick.Com/?projects=get2gnow], [get2gnow])
 AC_PREREQ(2.59)
 AC_COPYRIGHT([Copyright (C) 2009 Kaity G. B.])
 
@@ -35,9 +35,8 @@ dnl Library Dependencies, uses pkg-config to detect correct version, etc
 dnl
 dnl -----------------------------------------------------------
 
-LIBSOUP_MIN_VERSION=2.24.3
+LIBSOUP_MIN_VERSION=2.26.1
 LIBXML_MIN_VERSION=2.6.16
-GLIB_MIN_VERSION=2.20.0
 GTK_MIN_VERSION=2.12.12
 GCONF_MIN_VERSION=1.2.0
 LIBGIO_MIN_VERSION=2.15.5
@@ -87,7 +86,7 @@ PKG_CHECK_MODULES(get2gnow,
 	libcanberra-gtk >= $LIBCANBERRA_MIN_VERSION
 	libxml-2.0 >= $LIBXML_MIN_VERSION
 	gobject-2.0
-	libgnome-2.0
+	libgnomeui-2.0
 	gthread-2.0
 	gconf-2.0 >= $GCONF_MIN_VERSION
 	$gnome_keyring_pkgconfig
