--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -303,21 +303,20 @@ target_alias = @target_alias@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 C_STD_MODE=gnu99
-AM_CFLAGS =						\
-	-std=$(C_STD_MODE)				\
-	-I$(top_srcdir)                          	\
-	-I${top_builddir}				\
-	-DBUILDDIR=\""${abs_top_builddir}"\"		\
-	-DPREFIX="\"$(prefix)"\"			\
-	-DSYSCONFDIR=\""$(sysconfdir)"\"		\
-	-DDATADIR=\""$(datadir)"\"              	\
-	-DLIBDIR=\""$(libdir)"\"			\
-	-DLOCALEDIR=\""$(localedir)"\"			\
-	$(get2gnow_CFLAGS)				\
-	$(debug_CFLAGS)					\
-	$(WARN_CFLAGS)
+AM_CFLAGS=									\
+		-I$(top_srcdir)                        				\
+		-I${top_builddir}						\
+		-DBUILDDIR=\""${abs_top_builddir}"\"				\
+		-DPREFIX="\"$(prefix)"\"					\
+		-DSYSCONFDIR=\""$(sysconfdir)"\"				\
+		-DDATADIR=\""$(datadir)"\"              			\
+		-DLOCALEDIR=\""$(localedir)"\"					\
+		-DLIBDIR=\""$(libdir)"\"					\
+		$(get2gnow_CFLAGS)						\
+		$(WARN_CFLAGS)							\
+		-std=$(C_STD_MODE)
 
-get2gnow_LDADD =				\
+get2gnow_LDADD =								\
 	$(get2gnow_LIBS)
 
 all: all-am
