get2gnow #00EEEaC1 - caching, clean-up, & everythings shiny ;-)
I've done a lot of work on get2gnow's caching support, though its by no means done, so its not yet implemented in any major way.  Though most of my caching code is in place, well saving it is.

I've also changed how DMs & Replies are updated, basically it never clears those values so you'll have all over your replies and DMs continously available, so you can get to them when you have a chance & don't have to worry about them dropping off.

I've also made further UI and other tweaks.  For example 'Ctrl+W' now closes the current tab, what tweet you've selected & so you 'place in the timeline' isn't lost or dropped when new updates are loaded.

I've also extended, fixed, and improved get2gnow's extended SexyUrlLabel, 'src/label.c'.  It now supports IRC links, I've fixed a bug caused by multiple urls appearing in an update.

I've fixed and improved various other lil things, like adding needed GLIB macros & etc.  Mostly just some dirty work I was trying to do to get my brain going today.

I'm just to fatiqued & out of to have done any thing of much use today...LOL what's new huh?

Committed on : 2009-07-05 @ 09:06:33 PM


Commit Appended on : 2009-07-06 @ 12:32:49 AM


Commit Appended on : 2009-07-07 @ 01:37:03 PM

--- a/data/get2gnow.schemas.in
+++ b/data/get2gnow.schemas.in
@@ -287,8 +287,20 @@
 		</schema>
 		
 		<schema>
-			<key>/schemas/apps/get2gnow/ui/beep</key>
-			<applyto>/apps/get2gnow/ui/beep</applyto>
+			<key>/schemas/apps/get2gnow/alerts/disable_system_bell</key>
+			<applyto>/apps/get2gnow/alerts/disable_system_bell</applyto>
+			<owner>get2gnow</owner>
+			<type>bool</type>
+			<default>true</default>
+			<locale name="C">
+				<short>Disables all sound notifications</short>
+				<long>Disables all sound notifications.</long>
+			</locale>
+		</schema>
+
+		<schema>
+			<key>/schemas/apps/get2gnow/alerts/beep</key>
+			<applyto>/apps/get2gnow/alerts/beep</applyto>
 			<owner>get2gnow</owner>
 			<type>bool</type>
 			<default>true</default>
@@ -299,8 +311,8 @@
 		</schema>
 		
 		<schema>
-			<key>/schemas/apps/get2gnow/tweets/compose/no_length_beep</key>
-			<applyto>/apps/get2gnow/tweets/compose/no_length_beep</applyto>
+			<key>/schemas/apps/get2gnow/alerts/no_length_beep</key>
+			<applyto>/apps/get2gnow/alerts/no_length_beep</applyto>
 			<owner>get2gnow</owner>
 			<type>bool</type>
 			<default>true</default>
