get2gnow #00EEECaC2 - final features froze & under creation
I'm continuing to chip away at adding caching support, w/o breaking anything LOL.  Right now there are some issues with building cache file names in a way that they can easily be clean-up.  This will be easy to resolve but since its really a shiny *final touch* kinda fix, well I wanna save it until right before I'm ready for release.

Other wise I'm adding my two final features.  1st is just a list store / combo box combination that gives you access to your last 50 tweets.  I'll be making that into a preference but for now its just a constant.

My bigger, better, & 'has me giddy' new feature is my 'best friends' list view.  I've added a widget to the selected tweet area that let's you mark someone you're following as a 'best friend'. When they post a new update, since the last time you loaded get2gnow, their name appears in bold in the 'best friends updates' list. Clicking on their name opens a new tab an displaying their updates. But my fave part of this feature is my new 'best friends' tab which is just another TweetView but instead of displaying a timeline it displays your 'best friends' most recent updates.

I've also changed how maximum & minimum tweets are displayed for DMs, Replies, and 'Best Friends'.  All DMs & Replies are loaded when get2gnow starts, which I need to fix w/a preference so they're limited to say 'Show me replies from the last 1-14day' & 'Show me my Direct Messages from the last 1-7 days, 3-4 weeks, or 1-3months.  I'm still working on my 'best friends' feature, so for now its currently disabled.  I prolly have it working by the time I make my next commit...whenever that turns out to be.

No day turns out how I expect...so I expect nothing from any day & only hope to soon stop not expecting...or to have something that I've gotten used, maybe even gotten used to something that doesn't suck.  Though I don't care either so long as I stop expecting any thing, stop hoping for any thing, & 

--- a/configure.in
+++ b/configure.in
@@ -1,4 +1,4 @@
-AC_INIT([get2gnow], ["#00EEECaC1"], [http://uberChicGeekChick.Com/?projects=get2gnow], [get2gnow])
+AC_INIT([get2gnow], ["#00EEECaC2"], [http://uberChicGeekChick.Com/?projects=get2gnow], [get2gnow])
 AC_PREREQ(2.59)
 AC_COPYRIGHT([Copyright (C) 2009 Kaity G. B.])
 
@@ -35,12 +35,12 @@ dnl Library Dependencies, uses pkg-config to detect correct version, etc
 dnl
 dnl -----------------------------------------------------------
 
-LIBSOUP_MIN_VERSION=2.26.1
-LIBXML_MIN_VERSION=2.6.16
-GTK_MIN_VERSION=2.12.12
-GCONF_MIN_VERSION=1.2.0
-LIBGIO_MIN_VERSION=2.15.5
-LIBCANBERRA_MIN_VERSION=0.4
+LIBSOUP_VERSION_REQUIRED=2.26.1
+LIBXML_VERSION_REQUIRED=2.6.16
+GTK_VERSION_REQUIRED=2.12.12
+GCONF_VERSION_REQUIRED=1.2.0
+LIBGIO_VERSION_REQUIRED=2.15.5
+LIBCANBERRA_VERSION_REQUIRED=0.4
 
 dnl -----------------------------------------------------------
 dnl GNOME Keyring
@@ -77,18 +77,18 @@ PKG_CHECK_MODULES(get2gnow,
 [
 	libsexy
 	openssl
-	libsoup-2.4 >= $LIBSOUP_MIN_VERSION
+	libsoup-2.4 = $LIBSOUP_VERSION_REQUIRED
 	libnotify
 	gnome-vfs-2.0
-	gtk+-2.0 >= $GTK_MIN_VERSION
-	glib-2.0 >= $GLIB_MIN_VERSION
-	gio-2.0 >= $LIBGIO_MIN_VERSION
-	libcanberra-gtk >= $LIBCANBERRA_MIN_VERSION
-	libxml-2.0 >= $LIBXML_MIN_VERSION
+	gtk+-2.0 >= $GTK_VERSION_REQUIRED
+	glib-2.0 >= $GLIB_VERSION_REQUIRED
+	gio-2.0 >= $LIBGIO_VERSION_REQUIRED
+	libcanberra-gtk >= $LIBCANBERRA_VERSION_REQUIRED
+	libxml-2.0 >= $LIBXML_VERSION_REQUIRED
 	gobject-2.0
 	libgnomeui-2.0
 	gthread-2.0
-	gconf-2.0 >= $GCONF_MIN_VERSION
+	gconf-2.0 >= $GCONF_VERSION_REQUIRED
 	$gnome_keyring_pkgconfig
 ])
 AC_SUBST(get2gnow_CFLAGS)
